Fixed screen blend mode flicker

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -56,7 +56,7 @@ input[type=text] {
     width: 100%;
     height: 150%;
     object-fit: cover;
-    z-index: +2;
+    z-index: -1;
 }
 
 #pot {
@@ -94,9 +94,10 @@ input[type=text] {
       height: 200px;
       width: 200px;
       position: static;
-      z-index: 2;
+      z-index: 5;
       margin-left: auto ;
       margin-right: auto ;
+      margin-top: 30%;
   }
   .fadein {
       opacity: 0;
